Ensure Undo icon is visible

--- a/assets/css/pages/playing_game.css
+++ b/assets/css/pages/playing_game.css
@@ -38,5 +38,6 @@
 }
 
 .playing-game-controls button#undo {
-    margin-right: auto;
+    position: absolute;
+    left: 5%;
 }
